[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Bullet/Grenade10mm.png" type="Texture" id=1]
[ext_resource path="res://src/Bullet/Grenade.gd" type="Script" id=2]
[ext_resource path="res://assets/SFX/snd_thud.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 5 )

[sub_resource type="CircleShape2D" id=3]
radius = 64.0

[sub_resource type="Animation" id=4]
resource_name = "Flip"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[node name="Grenade" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 8
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CollisionDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionDetector"]
shape = SubResource( 2 )

[node name="ExplosionDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 258

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionDetector"]
shape = SubResource( 3 )

[node name="End" type="Position2D" parent="."]
position = Vector2( 0, 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -7.15256e-07, 8 )
scale = Vector2( 0.8, 0.8 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="Bounce2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flip = SubResource( 4 )

[connection signal="body_entered" from="CollisionDetector" to="." method="_on_CollisionDetector_body_entered"]
[connection signal="body_entered" from="ExplosionDetector" to="." method="_on_ExplosionDetector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
